// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZoomPanSlider /> renders with children 1`] = `
<ZoomPanSlider
  autoPlay={false}
  className=""
  classNames={Object {}}
  controls={false}
  disabled={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={null}
  slidesPerView={1}
  snapItems={true}
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={false}
    initialSlide={0}
    interval={3000}
    loop={false}
    maxIndicators={null}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "activeIndicator": "css-so6ht",
          "container": "css-nil",
          "inactiveIndicator": "css-1hipsfp",
          "indicator": Object {
            "bullets": "css-17uszht",
            "fraction": "css-eyy1lx",
          },
          "slide": "css-nil",
          "slider": "css-1i764wo",
        }
      }
      controls={false}
      disabled={false}
      indicators={false}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={10}
      onSlideChange={null}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          bulletActiveClass="css-so6ht"
          bulletClass="css-1hipsfp"
          containerClass="sg-swiper-container css-rdsogp css-nil"
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination={null}
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="bullets"
          prevButton={null}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp css-nil"
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="0/.0"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="1/.1"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="2/.2"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s3"
              >
                <SliderItem
                  key="3"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="3/.3"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s4"
              >
                <SliderItem
                  key="4"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="4/.4"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
            </div>
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </ImageSlider>
</ZoomPanSlider>
`;

exports[`<ZoomPanSlider /> wraps children in zoom containers 1`] = `
<ZoomPanSlider
  autoPlay={false}
  className=""
  classNames={Object {}}
  controls={false}
  disabled={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={null}
  slidesPerView={1}
  snapItems={true}
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={false}
    initialSlide={0}
    interval={3000}
    loop={false}
    maxIndicators={null}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "activeIndicator": "css-so6ht",
          "container": "css-nil",
          "inactiveIndicator": "css-1hipsfp",
          "indicator": Object {
            "bullets": "css-17uszht",
            "fraction": "css-eyy1lx",
          },
          "slide": "css-nil",
          "slider": "css-1i764wo",
        }
      }
      controls={false}
      disabled={false}
      indicators={false}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={10}
      onSlideChange={null}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          bulletActiveClass="css-so6ht"
          bulletClass="css-1hipsfp"
          containerClass="sg-swiper-container css-rdsogp css-nil"
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination={null}
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="bullets"
          prevButton={null}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp css-nil"
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="0/.0"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-xwe5xi "
                key=".$s1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <ZoomPanContainer
                      key="1/.1"
                      maxZoom={4}
                      minZoom={1}
                      onZoom={[Function]}
                      smoothness={500}
                      zoomBounce={0.3}
                      zoomOnTap={2}
                    >
                      <div
                        className="css-11jqakt"
                      >
                        <Hammer
                          direction="DIRECTION_ALL"
                          onDoubleTap={[Function]}
                          onPan={[Function]}
                          onPanEnd={[Function]}
                          onPanStart={[Function]}
                          onPinch={[Function]}
                          onPinchEnd={[Function]}
                          onPinchStart={[Function]}
                          options={
                            Object {
                              "recognizers": Object {
                                "pinch": Object {
                                  "enable": true,
                                },
                              },
                            }
                          }
                        >
                          <div>
                            <div
                              className="css-1t53m48"
                            >
                              <div
                                className="css-ivsd5g"
                              >
                                <TestElement>
                                  <Image
                                    alt={null}
                                    animating={true}
                                    backgroundColor="#f2f2f2"
                                    className=""
                                    forcePlaceholder={false}
                                    highestResolutionLoaded={[Function]}
                                    onError={null}
                                    onLoad={null}
                                    ratio={null}
                                    resolutions={
                                      Array [
                                        Object {
                                          "blur": 2,
                                          "height": 50,
                                          "width": 50,
                                        },
                                        Object {
                                          "height": 440,
                                          "width": 440,
                                        },
                                      ]
                                    }
                                    src="http://placekitten.com/300/300"
                                    transition={null}
                                  >
                                    <div
                                      className="css-326p2s "
                                    />
                                  </Image>
                                </TestElement>
                              </div>
                            </div>
                          </div>
                        </Hammer>
                      </div>
                    </ZoomPanContainer>
                  </div>
                </SliderItem>
              </div>
            </div>
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </ImageSlider>
</ZoomPanSlider>
`;
